5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4134/executions/1593_2426.log
== TEST (2019-03-28 10:17:10) 
-- CODE:
tc = float(input("Tempo gasto em viagem: "))
vm = float(input("Velocidade media: "))

dp = (vm * tc)



-- OUTPUT:
16.7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:18:24) 
-- CODE:
tc = float(input("Tempo gasto em viagem: "))
vm = float(input("Velocidade media: "))

dp = (vm * tc)

print(round(dp, 2)

-- ERROR:
File "XXXX", line 7
    
                      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:18:28) 
-- CODE:
tc = float(input("Tempo gasto em viagem: "))
vm = float(input("Velocidade media: "))

dp = (vm * tc)

print(round(dp, 2)
-- ERROR:
File "XXXX", line 7
    
                      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:18:39) 
-- CODE:
tc = float(input("Tempo gasto em viagem: "))
vm = float(input("Velocidade media: "))

dp = (vm * tc)

print(round(dp, 2))
-- OUTPUT:
900.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:18:59) 
-- CODE:
tc = float(input("Tempo gasto em viagem: "))
vm = float(input("Velocidade media: "))

dp = (vm * tc)

print(round(dp, 2))
-- OUTPUT:
900.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:19:18) 
-- CODE:
tc = float(input("Tempo gasto em viagem: "))
vm = float(input("Velocidade media: "))

dp = (vm * tc)

print(round(dp, 2))
-- OUTPUT:
900.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:20:50) 
-- CODE:
tc = float(input("Tempo gasto em viagem: "))
vm = float(input("Velocidade media: "))

dp = (vm * tc)

eq1 = (dp * 12.0)

print(round(dp, 2))

print(round(eq1, 2))
-- OUTPUT:
900.0
10800.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 10:21:03) 
-- CODE:
tc = float(input("Tempo gasto em viagem: "))
vm = float(input("Velocidade media: "))

dp = (vm * tc)

eq1 = (dp * 12.0)

print(round(dp, 2))

print(round(eq1, 2))
-- EXECUTION TIME:
0.129638
-- TEST CASE 1:
---- input:
9
100
---- correct output:
900.0
75.0
---- user output:
900.0
10800.0
-- TEST CASE 2:
---- input:
5
120

---- correct output:
600.0
50.0

---- user output:
600.0
7200.0
-- TEST CASE 3:
---- input:
1.2
80
---- correct output:
96.0
8.0

---- user output:
96.0
1152.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:21:43) 
-- CODE:
tc = float(input("Tempo gasto em viagem: "))
vm = float(input("Velocidade media: "))

dp = (vm * tc)

eq1 = (dp * 12000)

print(round(dp, 2))

print(round(eq1, 2))
-- OUTPUT:
900.0
10800000.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:22:17) 
-- CODE:
tc = float(input("Tempo gasto em viagem: "))
vm = float(input("Velocidade media: "))

dp = (vm * tc)

eq1 = (dp/2)

print(round(dp, 2))

print(round(eq1, 2))
-- OUTPUT:
900.0
450.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 10:22:27) 
-- CODE:
tc = float(input("Tempo gasto em viagem: "))
vm = float(input("Velocidade media: "))

dp = (vm * tc)

eq1 = (dp/2)

print(round(dp, 2))

print(round(eq1, 2))
-- EXECUTION TIME:
0.195628
-- TEST CASE 1:
---- input:
9
100
---- correct output:
900.0
75.0
---- user output:
900.0
450.0
-- TEST CASE 2:
---- input:
5
120

---- correct output:
600.0
50.0

---- user output:
600.0
300.0
-- TEST CASE 3:
---- input:
1.2
80
---- correct output:
96.0
8.0

---- user output:
96.0
48.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 10:22:52) 
-- CODE:
tc = float(input("Tempo gasto em viagem: "))
vm = float(input("Velocidade media: "))

dp = (vm * tc)

eq1 = (dp/2)

print(dp, 2)

print(eq1, 2)
-- EXECUTION TIME:
0.152434
-- TEST CASE 1:
---- input:
9
100
---- correct output:
900.0
75.0
---- user output:
900.0 2
450.0 2
-- TEST CASE 2:
---- input:
5
120

---- correct output:
600.0
50.0

---- user output:
600.0 2
300.0 2
-- TEST CASE 3:
---- input:
1.2
80
---- correct output:
96.0
8.0

---- user output:
96.0 2
48.0 2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 10:23:03) 
-- CODE:
tc = float(input("Tempo gasto em viagem: "))
vm = float(input("Velocidade media: "))

dp = (vm * tc)

eq1 = (dp/2)

print(dp

print(eq1)
-- EXECUTION TIME:
0.1325
-- ERROR:
  File "/home/codebench/codes/1593/2426/main.py", line 10
    print(eq1)
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 10:23:04) 
-- CODE:
tc = float(input("Tempo gasto em viagem: "))
vm = float(input("Velocidade media: "))

dp = (vm * tc)

eq1 = (dp/2)

print(dp

print(eq1)
-- EXECUTION TIME:
0.14364
-- ERROR:
  File "/home/codebench/codes/1593/2426/main.py", line 10
    print(eq1)
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 10:23:05) 
-- CODE:
tc = float(input("Tempo gasto em viagem: "))
vm = float(input("Velocidade media: "))

dp = (vm * tc)

eq1 = (dp/2)

print(dp

print(eq1)
-- EXECUTION TIME:
0.189344
-- ERROR:
  File "/home/codebench/codes/1593/2426/main.py", line 10
    print(eq1)
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 10:23:05) 
-- CODE:
tc = float(input("Tempo gasto em viagem: "))
vm = float(input("Velocidade media: "))

dp = (vm * tc)

eq1 = (dp/2)

print(dp

print(eq1)
-- EXECUTION TIME:
0.258032
-- ERROR:
  File "/home/codebench/codes/1593/2426/main.py", line 10
    print(eq1)
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 10:23:07) 
-- CODE:
tc = float(input("Tempo gasto em viagem: "))
vm = float(input("Velocidade media: "))

dp = (vm * tc)

eq1 = (dp/2)

print(dp)

print(eq1)
-- EXECUTION TIME:
0.15416
-- TEST CASE 1:
---- input:
9
100
---- correct output:
900.0
75.0
---- user output:
900.0
450.0
-- TEST CASE 2:
---- input:
5
120

---- correct output:
600.0
50.0

---- user output:
600.0
300.0
-- TEST CASE 3:
---- input:
1.2
80
---- correct output:
96.0
8.0

---- user output:
96.0
48.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:23:07) 
-- CODE:
tc = float(input("Tempo gasto em viagem: "))
vm = float(input("Velocidade media: "))

dp = (vm * tc)

eq1 = (dp/2)

print(dp)

print(eq1)
-- OUTPUT:
900.0
450.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 10:23:07) 
-- CODE:
tc = float(input("Tempo gasto em viagem: "))
vm = float(input("Velocidade media: "))

dp = (vm * tc)

eq1 = (dp/2)

print(dp)

print(eq1)
-- EXECUTION TIME:
0.12481
-- TEST CASE 1:
---- input:
9
100
---- correct output:
900.0
75.0
---- user output:
900.0
450.0
-- TEST CASE 2:
---- input:
5
120

---- correct output:
600.0
50.0

---- user output:
600.0
300.0
-- TEST CASE 3:
---- input:
1.2
80
---- correct output:
96.0
8.0

---- user output:
600.0
300.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 10:23:07) 
-- CODE:
tc = float(input("Tempo gasto em viagem: "))
vm = float(input("Velocidade media: "))

dp = (vm * tc)

eq1 = (dp/2)

print(dp)

print(eq1)
-- EXECUTION TIME:
0.206387
-- TEST CASE 1:
---- input:
9
100
---- correct output:
900.0
75.0
---- user output:
600.0
300.0
-- TEST CASE 2:
---- input:
5
120

---- correct output:
600.0
50.0

---- user output:
Tempo gasto em viagem: Velocidade media: 600.0
300.0
-- TEST CASE 3:
---- input:
1.2
80
---- correct output:
96.0
8.0

---- user output:
Tempo gasto em viagem: Velocidade media: 96.0
48.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 10:23:21) 
-- CODE:
tc = float(input("Tempo gasto em viagem: "))
vm = float(input("Velocidade media: "))

dp = (vm * tc)

eq1 = (dp/2)

print(dp)

print(eq1)
-- EXECUTION TIME:
0.126015
-- TEST CASE 1:
---- input:
9
100
---- correct output:
900.0
75.0
---- user output:
900.0
450.0
-- TEST CASE 2:
---- input:
5
120

---- correct output:
600.0
50.0

---- user output:
600.0
300.0
-- TEST CASE 3:
---- input:
1.2
80
---- correct output:
96.0
8.0

---- user output:
96.0
48.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:23:28) 
-- CODE:
tc = float(input("Tempo gasto em viagem: "))
vm = float(input("Velocidade media: "))

dp = (vm * tc)

eq1 = (dp/12)

print(dp)

print(eq1)
-- OUTPUT:
900.0
75.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 10:23:29) 
-- CODE:
tc = float(input("Tempo gasto em viagem: "))
vm = float(input("Velocidade media: "))

dp = (vm * tc)

eq1 = (dp/12)

print(dp)

print(eq1)
-- EXECUTION TIME:
0.192695
-- TEST CASE 1:
---- input:
9
100
---- correct output:
900.0
75.0
---- user output:
900.0
75.0
-- TEST CASE 2:
---- input:
5
120

---- correct output:
600.0
50.0

---- user output:
600.0
50.0
-- TEST CASE 3:
---- input:
1.2
80
---- correct output:
96.0
8.0

---- user output:
96.0
8.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
